syntax = "proto3";

option go_package = "./grpc/";

message UserDetails {
  int32 id = 1;
  string fname = 2;
  string city = 3;
  int64 phone = 4;
  float height = 5;
  bool Married = 6;
}

service UserService {
  rpc GetUserDetails (Request) returns (UserDetails);
  rpc GetUsersDetails (UserIds) returns (UserDetailsList);
}

message Request {
  int32 user_id = 1;
}

message UserIds {
  repeated int32 user_id = 1;
}

message UserDetailsList {
  repeated UserDetails user_details = 1;
}